@@ -60,6 +60,13 @@ configurations.all {
     }
 }
 
+test {
+    /* If in JDK 9 or higher, must mark illegal-access as denied */
+    if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs('--illegal-access=deny')
+    }
+}
+
 javadoc {
     options.tags "todo:a:TODO:"
 }
